--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -5,7 +5,29 @@
    "id": "9f4098f5",
    "metadata": {},
    "source": [
-    "# Preparation of the data for training and EDA"
+    "# Data Preparation for Training and EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da91983",
+   "metadata": {},
+   "source": [
+    "Prepares a subset of audio files for training and exploratory data analysis (EDA).\n",
+    "\n",
+    "## Tasks\n",
+    "1. Count the number of processed WAV files in the dataset directory.\n",
+    "2. Select a subset of audio files totaling ~5 hours in duration.\n",
+    "   - Each audio file is assumed to be 16 seconds long.\n",
+    "   - Files are randomly shuffled before selection.\n",
+    "\n",
+    "## Dependencies\n",
+    "- Python 3.10+\n",
+    "- glob, os, random, shutil\n",
+    "\n",
+    "## Usage\n",
+    "- Run all cells sequentially.\n",
+    "- Modify `directory`, `file_duration_sec`, or `target_hours` to adjust subset size or source location.\n"
    ]
   },
   {
@@ -13,7 +35,7 @@
    "id": "0ffe3b91",
    "metadata": {},
    "source": [
-    "Number of files:"
+    "## Task 1: Count the number of processed WAV files"
    ]
   },
   {
@@ -52,7 +74,7 @@
    "id": "b78aac94",
    "metadata": {},
    "source": [
-    "Select a chosen subset of 5h of audio with audios of 16 seconds length."
+    "## Task 2: Select a subset of audio files (~5 hours)"
    ]
   },
   {
