--- a/Exploratory_Dataset_Analysis/Exploratory_Dataset_Analysis.ipynb
+++ b/Exploratory_Dataset_Analysis/Exploratory_Dataset_Analysis.ipynb
@@ -5,7 +5,31 @@
    "id": "f0781ee2",
    "metadata": {},
    "source": [
-    "# Exploratory Dataset Analysis"
+    "# Exploratory Dataset Analysis\n",
+    "\n",
+    "Performs exploratory analysis on audio dataset metadata, focusing on style distributions and tempo (BPM).\n",
+    "\n",
+    "## Tasks\n",
+    "1. Analyze single-file style probabilities.\n",
+    "2. Compute global style distributions across the dataset, using:\n",
+    "   - Top-k style probabilities.\n",
+    "   - BPM distribution.\n",
+    "3. Compute global style distributions across the dataset, using the full 400-style tensor per file:\n",
+    "   - Calculate median and mean style probabilities.\n",
+    "   - Apply PCA for dimensionality reduction and visualization.\n",
+    "\n",
+    "## Dependencies\n",
+    "- Python 3.10+\n",
+    "- json, glob, collections\n",
+    "- numpy\n",
+    "- matplotlib\n",
+    "- torch\n",
+    "- scikit-learn\n",
+    "\n",
+    "## Usage\n",
+    "- Run all cells sequentially.\n",
+    "- Ensure dataset metadata files (JSON/tensor) are available in the working directory.\n",
+    "- Adjust file paths or number of styles (`top-k`, full tensor size) to match new datasets.\n"
    ]
   },
   {
@@ -13,7 +37,7 @@
    "id": "92a96150",
    "metadata": {},
    "source": [
-    "## One file style distribution"
+    "## Task 1: Analyze single-file style probabilities."
    ]
   },
   {
@@ -105,7 +129,7 @@
    "id": "0ff73801",
    "metadata": {},
    "source": [
-    "## All files style (5 top-k) and BPM distribution"
+    "## Task 2: Compute the top 5 styles per file and BPM distribution across the dataset"
    ]
   },
   {
@@ -261,7 +285,7 @@
    "id": "f1f284db",
    "metadata": {},
    "source": [
-    "## Using the full tensor (400 different styles)"
+    "## Task 3: Compute global style distributions across the dataset, using the full 400-style tensor per file"
    ]
   },
   {
@@ -269,7 +293,7 @@
    "id": "220faded",
    "metadata": {},
    "source": [
-    "### Median and mean for all the styles across the dataset"
+    "### Calculate median and mean style probabilities"
    ]
   },
   {
@@ -418,6 +442,14 @@
     "print(\"Styles with significant presence (active in >=5% of files):\")\n",
     "for idx in active_styles_idx:\n",
     "    print(f\"{style_names[idx]} - mean prob: {mean_probs[idx]:.3f}, active in {active_counts[idx]} files\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53cb0eed",
+   "metadata": {},
+   "source": [
+    "### Apply PCA for dimensionality reduction and visualization"
    ]
   },
   {
