--- a/evaluation/subjective_evaluation.ipynb
+++ b/evaluation/subjective_evaluation.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fd44b163",
    "metadata": {},
    "outputs": [
@@ -302,8 +302,8 @@
     "df = pd.read_excel(file_path, skiprows=1, header=None)\n",
     "\n",
     "# Extract just the response columns\n",
-    "agreement_data = df.iloc[:, [1, 2, 3]].copy()  # Q2–Q4\n",
-    "intensity_data = df.iloc[:, [4, 5, 13,14]].copy()  # Q5, Q19, Q20\n",
+    "agreement_data = df.iloc[:, [1, 2, 3]].copy()  \n",
+    "intensity_data = df.iloc[:, [4, 5, 13,14]].copy()  \n",
     "\n",
     "# Rename columns for clarity\n",
     "agreement_data.columns = [\"Q1\", \"Q2\", \"Q3\"]\n",
